--- a/hook-form/package.json
+++ b/hook-form/package.json
@@ -16,9 +16,11 @@
     "@farmfe/cli": "^1.0.2",
     "@farmfe/core": "^1.3.0",
     "@farmfe/plugin-react": "^1.2.0",
+    "@hookform/devtools": "^4.3.1",
     "@types/react": "18",
-    "core-js": "^3.36.1",
     "@types/react-dom": "18",
+    "core-js": "^3.36.1",
+    "react-hook-form": "^7.53.0",
     "react-refresh": "^0.14.0"
   }
 }
